# orbit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  build.rs  install.ps  install.sh
.agents/skills/: orbit
.github/workflows/: ci.yml  release.yml
docs/: android-backend-spec.md  chrome-cdp-ui-testing-spec.md  linux-application-spec.md  linux-ui-automation-spec.md  self-update-spec.md  windows-desktop-ui-backend-spec.md
examples/compiled-resources-app/: orbi.json  orbit.json
examples/ios-app-clip/: orbi.json  orbit.json
examples/ios-app-extension/: orbi.json  orbit.json
examples/ios-simulator-app/: orbi.json  orbit.json
examples/ios-watch-app/: orbi.json  orbit.json
examples/macos-app/: orbi.json  orbit.json
examples/mixed-language-app/: orbi.json  orbit.json
examples/swiftpm-multi-target-app/: orbi.json  orbit.json
examples/tvos-app/: orbi.json  orbit.json
examples/visionos-app/: orbi.json  orbit.json
schemas/: apple-app.v1.json  orbi-ui-test.v1.json  orbit-ui-test.v1.json
skills/orbit/: SKILL.md
src/: cli.rs  context.rs  lib.rs  main.rs  manifest.rs  util.rs
src/apple/: analysis.rs  anisette.rs  asc_api.rs  asc_session.rs  auth.rs  authkit.rs  bsp.rs  capabilities.rs  clean.rs  deps.rs  developer_services.rs  device.rs  git_dependencies.rs  grand_slam.rs  hooks.rs  ide.rs  lockfile.rs  logs.rs  mod.rs  portal.rs  preview.rs  provisioning.rs  quality.rs  runtime.rs  script.rs  (+6 more)
tests/: e2e_bsp.rs  e2e_cli.rs  e2e_deps.rs  e2e_hooks.rs  e2e_init.rs  e2e_live_apple.rs  e2e_quality.rs  e2e_run.rs  e2e_submit.rs  e2e_test_ui.rs
(+160 files in other folders)
