[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
apple_srp_client = "0.1.0"
base64 = "0.22.1"
aes = "=0.8.4"
aws-credential-types = "=1.2.14"
aws-sigv4 = "=1.4.2"
cbc = "=0.1.2"
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "=1.1.9"
getrandom = "0.3.4"
globset = "0.4.18"
hmac = "=0.12.1"
indicatif = "=0.17.11"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto", "use_pem"] }
md5 = "=0.8.0"
pbkdf2 = "0.12.2"
plist = "1.8.0"
p256 = "=0.13.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "brotli", "cookies", "deflate", "gzip", "json", "rustls", "zstd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "=1.0.27"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha2_011 = { package = "sha2", version = "=0.11.0" }
srp = "=0.7.0-rc.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
uuid = { version = "1.22.0", features = ["v4"] }
walkdir = "2.5.0"
aes-gcm = "=0.10.3"
yaml-rust2 = "=0.11.0"

[dev-dependencies]
